--- a/CoraTechnicalValidation/CoraTechnicalValidation/Base.lproj/LaunchScreen.storyboard
+++ b/CoraTechnicalValidation/CoraTechnicalValidation/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,30 +16,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashscreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="RYc-Ho-Fu8">
-                                <rect key="frame" x="87" y="328" width="240" height="240"/>
+                                <rect key="frame" x="107" y="403" width="200" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="PfF-qL-Xfc"/>
-                                    <constraint firstAttribute="width" constant="240" id="iUS-W4-dYu"/>
+                                    <constraint firstAttribute="height" constant="100" id="1TN-7d-4tm"/>
+                                    <constraint firstAttribute="width" constant="200" id="dgv-p2-z2C"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="RYc-Ho-Fu8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Aq8-Nj-gUu"/>
-                            <constraint firstItem="RYc-Ho-Fu8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sjH-fc-FoT"/>
+                            <constraint firstItem="RYc-Ho-Fu8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="3NY-1W-Aow"/>
+                            <constraint firstItem="RYc-Ho-Fu8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="eMb-iW-1EA"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="splashscreenImage" width="768" height="590"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="splashscreenImage" width="700" height="350"/>
     </resources>
 </document>
